--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
         <div id="home" class="carousel-inner">
           <div class="carousel-item active">
-            <img src="assets/img/door.png" class="d-block w-100" alt="...">
+            <img src="assets/img/door.png" class="d-block w-100 alt="...">
             <div class="carousel-caption ">
             <h5>Africa's Finest</h5>
               <p>Step in and get the dish you truely deserve, at Maykolly we never dissapoint</p>
