--- a/events.html
+++ b/events.html
@@ -119,9 +119,7 @@
             <p class="m-0 small">Copyright&nbsp;©&nbsp;MayKolly african restaurant 2022</p>
         </div>
     </footer>
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/current-day.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
