--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <meta property="og:type" content="website">
+    <meta name="description" content="&quot;African food' &quot;maykolly&quot; &quot;food&quot; &quot;london&quot; &quot;tottenham&quot; &quot;african&quot; &quot;africa&quot; ">
     <link rel="icon" type="image/jpeg" sizes="1500x1000" href="assets/img/mK.png">
     <link rel="icon" type="image/jpeg" sizes="900x700" href="assets/img/mK.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
